--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         </div>
         <ul>
             <li>
+                <a href="" target="_blank">Meu Portfolio</a>
+            </li>
+            <li>
                 <a href="https://github.com/Natapires" target="_blank">Me siga no GitHub</a>
             </li>
             <li>
