--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="profile">
             <img src="./assets/avatar.png" alt="Foto do Natã em frente a um computador, e com camiseta preta.">
             <h1 class="font-bold" line-height="30px">Natã Pires</h1>
-            <p>I'm a Software Engineer | Front-end </p>
+            <p>I'm a Software Engineer | Back-end </p>
         </div>
         <div id="switch" onclick="toggleMode()">
             <button></button>
@@ -28,6 +28,9 @@
             </li>
             <li>
                 <a href="https://natapiresdev.vercel.app/" target="_blank">Visite Meu Portfolio</a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/@iamnatapires" target="_blank">Acesse Meu Canal no YouTube</a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/nat%C3%A3-pires-ferreira-7062281a0/" target="_blank">Conecte-se comigo pelo LinkedIn</a>
