Update the picture

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <div id="container">
         <div id="profile">
-            <img src="./assets/avatar.png" alt="Foto do Natã em frente a um computador, e com camiseta preta.">
+            <img src="./assets/avatar3.png" alt="Foto do Natã de frente, vestindo jaqueta preta.">
             <h1 class="font-bold" line-height="30px">Natã Pires</h1>
-            <p>I'm a Software Engineer | Back-end </p>
+            <p>I'm a Software Developer | Back-end </p>
         </div>
         <div id="switch" onclick="toggleMode()">
             <button></button>
