--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="profile">
             <img src="./assets/avatar3.png" alt="Foto do Natã de frente, vestindo jaqueta preta.">
             <h1 class="font-bold" line-height="30px">Natã Pires</h1>
-            <p>I'm a Software Developer | Back-end </p>
+            <p>Software Engineer | Back-end </p>
         </div>
         <div id="switch" onclick="toggleMode()">
             <button></button>
